--- a/Poneys.html
+++ b/Poneys.html
@@ -107,12 +107,12 @@
         </section>
     </main>
 
-
     <footer>
         <section>
-            <div class="banner1"></div>
+            <div class="banner_copyright">
+                <p>2024 - Copyright © tous droits réservés - Carolane Mrksic</p>
+            </div>
         </section>
     </footer>
-
 </body>
 </html>
