--- a/Chevaux.html
+++ b/Chevaux.html
@@ -183,12 +183,12 @@
         </section>
     </main>
 
-
     <footer>
         <section>
-            <div class="banner1"></div>
+            <div class="banner_copyright">
+                <p>2024 - Copyright © tous droits réservés - Carolane Mrksic</p>
+            </div>
         </section>
     </footer>
-
 </body>
 </html>
