--- a/Licornes.html
+++ b/Licornes.html
@@ -120,13 +120,13 @@
             </div>
         </section>
     </main>
-
-
+    
     <footer>
         <section>
-            <div class="banner1"></div>
+            <div class="banner_copyright">
+                <p>2024 - Copyright © tous droits réservés - Carolane Mrksic</p>
+            </div>
         </section>
     </footer>
-
 </body>
 </html>
