--- a/Poneys.html
+++ b/Poneys.html
@@ -15,7 +15,7 @@
         <section>
             <div class="banner1">
                 <ul>
-                    <li><a href="Accueil.html">Accueil</a></li>
+                    <li><a href="index.html">Accueil</a></li>
                     <li><a href="Pegases.html">Pégases</a></li>
                     <li><a href="Licornes.html">Licornes</a></li>
                     <li><a href="Chevaux.html">Chevaux</a></li>
